@@ -201,5 +201,6 @@
  148 013e 80250000 00007F   		andb	\$~0x80,foo
  149                       	
  150                       		# Force a good alignment.
- 151 0145 0000              		.word	0
- 152 0147 00                		.byte	0
+ 151 0145 00000000 00000000[ 	]*.p2align	4,0
+ 151      000000
+
