@@ -163,5 +163,5 @@ foo:
  nop
 # A bad sfence modrm byte
 .byte 0x65,0x0F,0xAE,0xff
-# Pad out to goo alignment
-.byte 0x90,0x90,0x90,0x90,0x90,0x90,0x90,0x90,0x90,0x90,0x90,0x90
+# Pad out to good alignment
+ .p2align 4,0
